.k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uiptel-api
  labels:
    app: uiptel-api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: uiptel-api
  template:
    metadata:
      labels:
        app: uiptel-api
    spec:
      containers:
      - name: uiptel-api
        image: anryzhov/uiptel-api:0.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
