.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: uiptel
  labels:
    app: api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${DIGEST_IMAGE}
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
