.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: uiptel
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
