.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: uiptel
  annotations:
spec:
  tls:
  - hosts:
      - api.uiptel.com
    secretName: api-uiptel-tls-cert
  rules:
  - host: api.uiptel.com
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 3000
